# poetry-dual-gpt

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODEL_CARD.md  README.md  model.py  pyproject.toml  requirements.txt  roadmap.md  run.sh  sample.py  train.py
client/: requirements.txt  server.py  start.py
colab/: colab_train.ipynb
data/: dataset.py  preprocess.py  vocab_tokens.txt
data_service/: extract_facebook.py  merge_dataset.py  requirements.txt  scraper.py
docs/: industry_ml_deployment.md  rhyme_conditioning.md  roadmap_v4.1.md  roadmap_v4.2.md  roadmap_v4.md  roadmap_v5.md  single_stage_plan.md  two_stage_training.md
documents/: deploy.md  deploy_pack.md  eval_1000.json  eval_100_novel.json  evaluation_fix_plan.md  fastapi_crash_course.md  final_exam.md  improvements.md  multi_couplet_plan.md  phase4_roadmap.md  phase9_rhyme_conditioning.md  rhyme_conditioning.md  roadmap.md  roadmap_v2.md  roadmap_v3.md  roadmap_v4.1.md  roadmap_v4.2.md  roadmap_v4.md  roadmap_v5.md  rule_evaluation.json  rule_evaluation.md  stage_comparison.md  two_stage_training.md
evaluate/: README.md  eval_doi_tho.py  eval_instruct.py  eval_quality.py  eval_qwen.py  eval_rules.py  evaluate.py  instruct_evaluation.json  prompts.py  quality_evaluation.json  quality_evaluation_v4.2.3.json  qwen_evaluation.json  rule_evaluation.json  rule_evaluation_v4.2.3.json  stage_comparison.json
finetune/: colab_train.ipynb  finetune.py  requirements.txt
resources/: facebook_poems.csv
salad/: .env.example  Dockerfile  README.md  deploy.py  entrypoint.sh  requirements.txt  train.py
scripts/: pack_for_doitho.sh  upload_to_r2.py
src/: clean_data.py  dataset.py  eval_1000.py  eval_100_novel.py  eval_rules.py  evaluate.py  extract_facebook.py  generation.py  model.py  preprocess.py  preprocess_doi_tho.py  sample.py  tones.py  train.py  train_bpe.py
test_output/: log.txt
(+145 files in other folders)
